--- a/tutorial_1/first_llvm_project/makefile
+++ b/tutorial_1/first_llvm_project/makefile
@@ -1,6 +1,5 @@
-BIN_DIR		:= ~/Documents/llvm/llvm-install/bin/
-LLVM_CONFIG	:= $(BIN_DIR)llvm-config
-LDFLAGS		:= $(shell $(LLVM_CONFIG) --ldflags) $(shell $(LLVM_CONFIG) --libs bitreader core support) -lpthread -ltinfo
+LLVM_CONFIG	:= llvm-config
+LDFLAGS		:= $(shell $(LLVM_CONFIG) --ldflags) $(shell $(LLVM_CONFIG) --libs bitreader core support) -lpthread
 COMMON_FLAGS	:= -Wall -Wextra
 CXXFLAGS	:= $(COMMON_FLAGS) $(shell $(LLVM_CONFIG) --cxxflags)
 CPPFLAGS	:= $(shell $(LLVM_CONFIG) --cppflags)
